# arena-combat-engine-

./: LICENSE  README.md
arena/: CMakeLists.txt  run.sh
arena/src/: main.c
arena/src/game/: scale.h
arena/src/platform/: platform.c  platform.h
arena/src/render/: camera.c  mesh.c  mesh.h
arena/src/ui/: ui_render.c  ui_text.c  ui_text.h
assets/config/: physics_modes.json
assets/config/scenes/: showdown.json
assets/config/vehicles/: sports_car.json
assets/data/: maneuvers.json  physics.json
assets/data/equipment/: accessories.json  armor.json  brakes.json  chassis.json  gearboxes.json  power_plants.json  suspension.json  tires.json  weapons.json
assets/data/tuning/: gas_acceleration_targets.json
assets/data/vehicles/: pickup_truck.json  sedan_sports.json  sports_car.json  test_10mph.json  test_15mph.json  vehicle_format_proposal.json
assets/models/chassis/: compact_body.mtl
assets/scripts/: freestyle_assist.lua  master.lua  tests.lua  turn_executor.lua
assets/scripts/modules/: esc.lua  launch_control.lua  maneuver.lua  tcs.lua  test_sequence.lua  timer_0_60.lua
client/: CMakeLists.txt  build.sh  run.sh
client/src/: main.c  main.cpp
client/src/game/: config_loader.c  config_loader.cpp  config_loader.h  entity.c  entity.h  equipment_loader.c  equipment_loader.cpp  equipment_loader.h  maneuver.cpp  maneuver.h  turn_planning.h
client/src/math/: vec3.c
client/src/physics/: jolt_physics.cpp  jolt_physics.h  ode_physics.c  ode_physics.h
client/src/platform/: platform.h
client/src/render/: camera.c  camera.h  floor.c  line_render.c  line_render.h  mesh.c  mesh.cpp  mesh.h  obj_loader.c  obj_loader.cpp  obj_loader.h  shader.c  texture.cpp  texture.h
client/src/script/: reflex_script.cpp  reflex_script.h
client/src/ui/: ui_render.h
data/: carwars_db.json
docs/: CONFIG_GUIDE.md  PHYSICS_TUNING_STATUS.md  ROADMAP.md  assets.md  planning-ui-design.md  vision.md
docs/proposals/: README.md  maneuver-scripting-system.md  physics-based-turn-system.md
scripts/: extract_books.sh
server/: go.mod
server/cmd/server/: main.go
server/internal/game/: state.go
server/internal/lobby/: lobby.go
server/internal/net/: server.go
tools/: blender_extract_vehicle_parts.py
